# bdd_package

./: CMakeCache.txt  CMakeLists.txt  README.txt
benchmarks/: List of bench files tested.txt  List of files with buffer gates  test.bench
benchmarks/itc99-poli2/: Benchmark Description Table.txt
benchmarks/itc99-poli2/b01/: b01.ps
benchmarks/itc99-poli2/b05/: U1160.ps
benchmarks/itc99-poli2/b14_1/: b14_1_C.bench  b14_1_opt.bench  b14_1_opt_C.bench
benchmarks/itc99-poli2/b15_1/: b15_1_C.bench  b15_1_opt.bench  b15_1_opt_C.bench
benchmarks/itc99-poli2/b17_1/: b17_1_C.bench  b17_1_opt.bench  b17_1_opt_C.bench
benchmarks/itc99-poli2/b18_1/: b18_1_opt.bench  b18_1_opt_C.bench
benchmarks/itc99-poli2/b20_1/: b20_1_C.bench  b20_1_opt.bench  b20_1_opt_C.bench
benchmarks/itc99-poli2/b21_1/: b21_1_C.bench  b21_1_opt.bench  b21_1_opt_C.bench
benchmarks/itc99-poli2/b22_1/: b22_1_C.bench  b22_1_opt.bench  b22_1_opt_C.bench
src/: CMakeLists.txt  Manager.cpp  Manager.h  ManagerInterface.h  hash_defs.h  main.cpp
src/bench/: Dumper.cpp  bench_circuit_manager.cpp  bench_circuit_manager.hpp  circuit_to_BDD_manager.cpp
src/test/: Tests.h
